# M2S1P

./: .gitignore
EE326/TP-Asservissement_visuel/: CMakeLists.txt  Castan.c  Castan.h  CommandeCamera.h  Definitions.h  Gauss.c  Gauss.h  Makefile.win  Mil.h  ProgrammePrincipal.c  Projet1.dev  TP_Asservissement.ncb  TP_Asservissement.sln  TP_Asservissement.vcproj  prog.c
EE326/TP-Asservissement_visuel/Debug/: BuildLog.htm  TP_Asservissement.ilk  vc70.idb
EE326/TP-Asservissement_visuel/src/: camera.cpp
EE326/TP-Asservissement_visuel/src/visServoing/: Castan.cpp  Castan.h  CommandeCamera.c  Definitions.h
EE326/TP-Calibrage/: Thumbs.db  saisie_2D_3D.m  stereo_2cam_tp.asv  stereo_2cam_tp.m
EE326/TP-Fusion/: EstimateFromExtKalman.m  EstimateFromKalman.asv  EstimateFromKalman.m  EstimateFromSpeeds.m  Experience1.mat  Experience2.mat  filtreKalman.docx
EE326/TP-Omni/: ImageParabolique.tif  omni.asv  omni.m
EE326/TP-Stereo/: Harris.m  stereovision.mat  tp_stereovision.asv  tp_stereovision.m
EE326/TP-Tracking/: Poursuite.asv  Poursuite.m  flot_optique.m
IN319/: Makefile  Makefile~  Projet.cpp  Projet.cpp~  Rapport.odt
IN319/_build/: Projet
IN330/: Déroulement du projet.txt  Rapport.odt
IN330/Projet/: Assembly-CSharp-firstpass.csproj  Assembly-CSharp-vs.csproj  Assembly-CSharp.csproj  Assembly-UnityScript-firstpass-vs.unityproj  Assembly-UnityScript-vs.unityproj  Assembly-UnityScript.unityproj  Nouveau document texte.txt  Projet-csharp.sln  Projet.sln  Projet.userprefs
IN334/: .~lock.Rapport.odt#  Cahier des charges.odt  Rapport.odt  Remarques.txt
(+540 files in other folders)
